<resources>
    <string name="app_name">Hotel</string>
    <string name="title">Отель</string>
    <string name="rating">Отлично</string>
    <string name="star">star</string>
    <string name="address">Madinat Makadi, Safaga Road, Makadi Bay, Египет</string>
    <string name="cost">от 111 111 ₽</string>
    <string name="about">Об отеле</string>
    <string name="info1">3-я линия</string>
    <string name="info2">Платный Wi-Fi в фойе</string>
    <string name="info3">30 км до аэропорта</string>
    <string name="info4">1 км до пляжа</string>
    <string name="aboutInfo">Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!</string>
    <string name="emoji">emoji</string>
    <string name="conveniences">Удобства</string>
    <string name="necessary">Самое необходимое</string>
    <string name="arrow">arrow</string>
    <string name="included">Что включено</string>
    <string name="excluded">Что не включено</string>
    <string name="choose">К выбору номера</string>
    <string name="cost2">за тур с перелётом</string>
    <string name="chooseRoom">Выбрать номер</string>
    <string name="allInclusive">Все включено</string>
    <string name="Conditioner">Кондиционер</string>
    <string name="sevenNights">за 7 ночей с перелетом</string>
    <string name="steigenberger_makadi">Steigenberger Makadi</string>
    <string name="back_arrow_btn">back_arrow_btn</string>
    <string name="roompic">roomPic</string>
    <string name="value">+7 (951) 555–99–00</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Почта</string>
    <string name="Super">Супер!</string>
    <string name="confirming">Подтверждение заказа №104893 может занять некоторое время (от 1 часа до суток).\nКак только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="accepting_order">Ваш заказ принят в работу</string>
    <string name="paying_button_text">Оплатить 198 036 ₽</string>
    <string name="sum">198 036 ₽</string>
    <string name="service_cost">2 136 ₽</string>
    <string name="fuel_fee">9 300 ₽</string>
    <string name="tour_cost">186 600 ₽</string>
    <string name="sum_text">К оплате</string>
    <string name="service_fee_text">Сервисный сбор</string>
    <string name="fuel_fee_text">Топливный сбор</string>
    <string name="tour_text">Тур</string>
    <string name="test_email">test@test.ru</string>
    <string name="customer_info_text">Информация о покупателе</string>
    <string name="all_inclusive">Все включено</string>
    <string name="standart_text">Стандартный с видом на бассейн или сад</string>
    <string name="seven_nights">7 ночей</string>
    <string name="dates">19.09.2023 – 27.09.2023</string>
    <string name="egypt_hugarda">Египет, Хургада</string>
    <string name="saint_p">Санкт-Петербург</string>
    <string name="feeding">Питание</string>
    <string name="room">Номер</string>
    <string name="nights">Кол-во ночей</string>
    <string name="dates_text">Даты</string>
    <string name="country_city">Страна, город</string>
    <string name="departing">Вылет из</string>
    <string name="private_text">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
</resources>