<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.BookingPaidFragment">

    <include layout="@layout/toolbar"/>

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="150dp"
    android:src="@drawable/party_popper"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accepting_order"
        android:layout_gravity="center"
        android:layout_marginBottom="65dp"
        android:textAppearance="@style/success"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="329dp"
        android:text="@string/confirming"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAppearance="@style/cost2"/>

    <LinearLayout
        android:id="@+id/bars_bars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="12dp"
        android:background="@drawable/bar">

        <Button
            android:id="@+id/chooseBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="28dp"
            android:backgroundTint="@color/blue"
            android:text="@string/Super"
            android:textAppearance="@style/button"
            app:cornerRadius="15dp" />

    </LinearLayout>



</FrameLayout>