<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.RoomFragment"
    android:background="@drawable/background">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/tab1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/frame_579"
            android:orientation="vertical">

        <View
            android:id="@+id/image1"
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/roompic"
            android:paddingTop="16dp" />
            <TextView
                android:id="@+id/tab1room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:text="@string/title"
                android:textAppearance="@style/name"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tab1Info1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/frame_2"
                    android:gravity="center_horizontal|top"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="2dp"
                    android:text="@string/allInclusive"
                    android:textAppearance="@style/info" />


                <TextView
                    android:id="@+id/tab1Info2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/frame_2"
                    android:gravity="center_horizontal|top"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="2dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/Conditioner"
                    android:textAppearance="@style/info" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tab1Cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/cost"
                    android:textAppearance="@style/cost"/>

                <TextView
                    android:id="@+id/tab1Cost2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/sevenNights"
                    android:textAppearance="@style/cost2"/>

            </LinearLayout>

            <Button
                android:id="@+id/tab1Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="28dp"
                android:backgroundTint="@color/blue"
                android:text="@string/chooseRoom"
                android:textAppearance="@style/button"
                app:cornerRadius="15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame_579"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <View
                android:id="@+id/image2"
                android:layout_width="400dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/roompic"
                android:paddingTop="16dp" />
            <TextView
                android:id="@+id/tab2Room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:text="@string/title"
                android:textAppearance="@style/name"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tab2Info1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/frame_2"
                    android:gravity="center_horizontal|top"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="2dp"
                    android:text="@string/allInclusive"
                    android:textAppearance="@style/info" />


                <TextView
                    android:id="@+id/tab2Info2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/frame_2"
                    android:gravity="center_horizontal|top"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="2dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/Conditioner"
                    android:textAppearance="@style/info" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tab2Cost1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/cost"
                    android:textAppearance="@style/cost"/>

                <TextView
                    android:id="@+id/tab2Cost2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/sevenNights"
                    android:textAppearance="@style/cost2"/>

            </LinearLayout>

            <Button
                android:id="@+id/tab2Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="28dp"
                android:backgroundTint="@color/blue"
                android:text="@string/chooseRoom"
                android:textAppearance="@style/button"
                app:cornerRadius="15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame_579"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <View
                android:id="@+id/image3"
                android:layout_width="400dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/roompic"
                android:paddingTop="16dp" />
            <TextView
                android:id="@+id/tab3Room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:text="@string/title"
                android:textAppearance="@style/name"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tab3Info1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/frame_2"
                    android:gravity="center_horizontal|top"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="2dp"
                    android:text="@string/allInclusive"
                    android:textAppearance="@style/info" />


                <TextView
                    android:id="@+id/tab3Info2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/frame_2"
                    android:gravity="center_horizontal|top"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="2dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/Conditioner"
                    android:textAppearance="@style/info" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tab3Cost1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/cost"
                    android:textAppearance="@style/cost"/>

                <TextView
                    android:id="@+id/tab3Cost2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/sevenNights"
                    android:textAppearance="@style/cost2"/>

            </LinearLayout>

            <Button
                android:id="@+id/tab3Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="28dp"
                android:backgroundTint="@color/blue"
                android:text="@string/chooseRoom"
                android:textAppearance="@style/button"
                app:cornerRadius="15dp" />

        </LinearLayout>

    </TableLayout>

</ScrollView>